Programming System Unix/PSU_2015_my_ls/test.txt
In file included from /usr/include/stdio.h:33:0,
                 from main.c:11:
/usr/lib/gcc/x86_64-linux-gnu/4.9/include/stddef.h:212:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘typedef’
 typedef __SIZE_TYPE__ size_t;
 ^
In file included from /usr/include/stdio.h:74:0,
                 from main.c:11:
/usr/include/libio.h:306:3: error: unknown type name ‘size_t’
   size_t __pad5;
   ^
/usr/include/libio.h:310:67: error: ‘size_t’ undeclared here (not in a function)
   char _unused2[15 * sizeof (int) - 4 * sizeof (void *) - sizeof (size_t)];
                                                                   ^
/usr/include/libio.h:338:62: error: expected declaration specifiers or ‘...’ before ‘size_t’
 typedef __ssize_t __io_read_fn (void *__cookie, char *__buf, size_t __nbytes);
                                                              ^
/usr/include/libio.h:347:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __n);
      ^
/usr/include/libio.h:469:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘_IO_sgetn’
 extern _IO_size_t _IO_sgetn (_IO_FILE *, void *, _IO_size_t);
                   ^
In file included from main.c:11:0:
/usr/include/stdio.h:319:35: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern FILE *fmemopen (void *__s, size_t __len, const char *__modes)
                                   ^
/usr/include/stdio.h:325:47: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern FILE *open_memstream (char **__bufloc, size_t *__sizeloc) __THROW __wur;
                                               ^
/usr/include/stdio.h:337:20: error: expected declaration specifiers or ‘...’ before ‘size_t’
       int __modes, size_t __n) __THROW;
                    ^
/usr/include/stdio.h:344:10: error: expected declaration specifiers or ‘...’ before ‘size_t’
          size_t __size) __THROW;
          ^
/usr/include/stdio.h:386:44: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int snprintf (char *__restrict __s, size_t __maxlen,
                                            ^
/usr/include/stdio.h:390:45: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int vsnprintf (char *__restrict __s, size_t __maxlen,
                                             ^
/usr/include/stdio.h:666:11: error: expected declaration specifiers or ‘...’ before ‘size_t’
           size_t *__restrict __n, int __delimiter,
           ^
/usr/include/stdio.h:669:9: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t *__restrict __n, int __delimiter,
         ^
/usr/include/stdio.h:679:8: error: expected declaration specifiers or ‘...’ before ‘size_t’
        size_t *__restrict __n,
        ^
/usr/include/stdio.h:709:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread’
 extern size_t fread (void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:715:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite’
 extern size_t fwrite (const void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:737:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread_unlocked’
 extern size_t fread_unlocked (void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:739:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite_unlocked’
 extern size_t fwrite_unlocked (const void *__restrict __ptr, size_t __size,
               ^
In file included from main.c:12:0:
/usr/include/stdlib.h:139:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__ctype_get_mb_cur_max’
 extern size_t __ctype_get_mb_cur_max (void) __THROW __wur;
               ^
In file included from main.c:12:0:
/usr/include/stdlib.h:331:4: error: expected declaration specifiers or ‘...’ before ‘size_t’
    size_t __statelen) __THROW __nonnull ((2));
    ^
/usr/include/stdlib.h:361:4: error: expected declaration specifiers or ‘...’ before ‘size_t’
    size_t __statelen,
    ^
/usr/include/stdlib.h:466:22: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
                      ^
/usr/include/stdlib.h:468:22: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *calloc (size_t __nmemb, size_t __size)
                      ^
/usr/include/stdlib.h:468:38: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *calloc (size_t __nmemb, size_t __size)
                                      ^
/usr/include/stdlib.h:480:36: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *realloc (void *__ptr, size_t __size)
                                    ^
In file included from /usr/include/stdlib.h:492:0,
                 from main.c:12:
/usr/include/alloca.h:32:22: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *alloca (size_t __size) __THROW;
                      ^
In file included from main.c:12:0:
/usr/include/stdlib.h:498:22: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *valloc (size_t __size) __THROW __attribute_malloc__ __wur;
                      ^
/usr/include/stdlib.h:503:45: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int posix_memalign (void **__memptr, size_t __alignment, size_t __size)
                                             ^
/usr/include/stdlib.h:503:65: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int posix_memalign (void **__memptr, size_t __alignment, size_t __size)
                                                                 ^
/usr/include/stdlib.h:756:9: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t __nmemb, size_t __size, __compar_fn_t __compar)
         ^
/usr/include/stdlib.h:756:25: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t __nmemb, size_t __size, __compar_fn_t __compar)
                         ^
/usr/include/stdlib.h:765:34: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void qsort (void *__base, size_t __nmemb, size_t __size,
                                  ^
/usr/include/stdlib.h:765:50: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void qsort (void *__base, size_t __nmemb, size_t __size,
                                                  ^
/usr/include/stdlib.h:844:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __len) __THROW __nonnull ((3, 4, 5));
      ^
/usr/include/stdlib.h:847:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __len) __THROW __nonnull ((3, 4, 5));
      ^
/usr/include/stdlib.h:851:31: error: expected declaration specifiers or ‘...’ before ‘size_t’
       char *__restrict __buf, size_t __len)
                               ^
/usr/include/stdlib.h:855:31: error: expected declaration specifiers or ‘...’ before ‘size_t’
       char *__restrict __buf, size_t __len)
                               ^
/usr/include/stdlib.h:863:36: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int mblen (const char *__s, size_t __n) __THROW;
                                    ^
/usr/include/stdlib.h:867:34: error: expected declaration specifiers or ‘...’ before ‘size_t’
      const char *__restrict __s, size_t __n) __THROW;
                                  ^
/usr/include/stdlib.h:874:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘mbstowcs’
 extern size_t mbstowcs (wchar_t *__restrict  __pwcs,
               ^
/usr/include/stdlib.h:877:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘wcstombs’
 extern size_t wcstombs (char *__restrict __s,
               ^
In file included from main.c:14:0:
/usr/include/dirent.h:353:5: error: expected declaration specifiers or ‘...’ before ‘size_t’
     size_t __nbytes,
     ^
